tests/error/misc/no-entry.rd
// test: Can not link program without entry
// run: ./build/$BUILD/bin/rodac % -o=%.out --messages=minimal
// cleanup: rm %.out

pub fn foo() { }

